Calendar: fix ugly conflict table on IE 6 7 8

--- a/ui/resources/themes/default/styles/style.css
+++ b/ui/resources/themes/default/styles/style.css
@@ -1056,6 +1056,9 @@ input.datePicker {
 .spreadSheet colgroup.highlight, .spreadSheet col.highlight {
   background-color: #f4f3c5;
 }
+.spreadSheet th {
+  width: auto;
+}
 
 /* ------------------------------------------------------------------------- */
 /* messsage  */
